Fix parallax on desktop with scrollbars Clickthrough nav on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ nav {
 	position: fixed;
 	top: 0;
 	z-index: 6;
+	pointer-events: none;
 }
 
 #navbg {
@@ -26,6 +27,7 @@ nav {
 	top: 0;
 	left: 0;
 	z-index: 5;
+	pointer-events: none;
 }
 
 nav > a {
@@ -218,10 +220,6 @@ footer > a:not(:last-of-type) {
 	transform-style: preserve-3d;
 	overflow-x: hidden;
 	overflow-y: scroll;
-	margin-left: calc(100% - 100vw);
-    margin-right: calc(100% - 100vw);
-    padding-left: calc(100vw - 100%);
-    padding-right: calc(100vw - 100%);
 }
 
 #contentcontainer {
@@ -330,6 +328,10 @@ footer > a:not(:last-of-type) {
 	transform: translateZ(-3px) scale(4);
 	z-index: -1;
 	overflow: hidden;
+	margin-left: calc(100% - 100vw);
+    margin-right: calc(100% - 100vw);
+    padding-left: calc(100vw - 100%);
+    padding-right: calc(100vw - 100%);
 }
 
 #homephoto > h2 {
@@ -341,7 +343,7 @@ footer > a:not(:last-of-type) {
 }
 
 #homephoto > p {
-	position: relative;
+	position: absolute;
 	top: 150px;
 	left: 25px;
 	width: 180px;
